--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ footer div {
 }
 
 footer a {
-    color: #024e76
+    color: #024e76;
 }
 
 section {
@@ -207,11 +207,11 @@ section {
  }
 
  .text-left {
-     text-align: left
+     text-align: left;
  }
 
  .text-right {
-     text-align: right
+     text-align: right;
  }
 
  .trainer-bio h3 {
@@ -228,15 +228,6 @@ section {
  .trainer-bio p {
      font-size: 17px;
      line-height: 1.3;
- }
-
- .section-title {
-     font-size: 55px;
-     display: inline-block;
-     padding: 0 100px 20px 100px;
-     border-bottom: 3px solid;
-     margin-bottom: 35px;
-     color: #024e76;
  }
 
  /* REACH OUT STYLES START */
@@ -261,4 +252,20 @@ section {
      text-align: left;
      margin: 30px 0 0 60px;
      color: white;
+ }
+ 
+ .contact-info h3 {
+     color: #fce138;
+     font-size: 32px;
+ }
+
+ .contact-info p, .contact-info address {
+     margin: 20px 0;
+     line-height: 1.5;
+     font-size: 20px;
+     font-style: normal;
+ }
+ 
+ .contact-info a {
+     color: #fce138;
  }
