--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,24 +52,25 @@ footer {
     background-color: #fce138;
     width: 100%;
     padding: 40px 35px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap ;
 }
 
 footer h2 {
-    display: inline;
     color: #024e76;
     font-size: 30px;
     margin: 0;
 }
 
 footer div {
-    float: right;
     line-height: 1.5;
     text-align: right;
     font-size: 15px;
 }
 
 footer a {
-    color: #39a6b2;
+    color: #024e76;
 }
 
 section {
