--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,6 +261,18 @@ section {
      line-height: 1.3;
  }
 
+.service-grid-container {
+    display: grid;
+}
+
+.service-grid-item {
+    width: 200px;
+    height: 50px;
+    background-color: orange;
+    border: solid;
+    color: black;
+}
+
  /* REACH OUT STYLES START */
  .contact {
      background: #024e76;
@@ -445,6 +457,5 @@ section {
    .contact-form {
        order: 3;
    }
-
 
 }
