--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,15 +262,30 @@ section {
  }
 
 .service-grid-container {
-    display: grid;
+   justify-items: start end center stretch;
+   align-items: start end center stretch;
 }
 
 .service-grid-item {
-    width: 200px;
-    height: 50px;
     background-color: orange;
     border: solid;
+    padding: 1em;
     color: black;
+}
+
+.box1 {
+    grid-column: 1/ span 1;
+    grid-row: 1/ span 2;
+}
+
+.box2 {
+    grid-column: 3/4;
+    grid-row: 1/-1;
+}
+
+.box3 {
+    grid-column: 2/ span 2;
+    grid-row: 3/ span 1;
 }
 
  /* REACH OUT STYLES START */
@@ -349,6 +364,7 @@ section {
 .flex-row {
     display: flex;
 }
+
 
 /*  MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
