--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -315,18 +315,6 @@ section {
     font-weight: bold;
 }
 
-.box1 {
-    
-}
-
-.box2 {
-    
-}
-
-.box3 {
-    
-}
-
  /* REACH OUT STYLES START */
  .contact {
      background: #024e76;
@@ -480,6 +468,25 @@ section {
 
     .step-text {
         flex: 100%;
+    }
+
+    .service-grid-container {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .service-grid-item.basic {
+        grid-column: 1;
+    }
+
+    .service-grid-item.both {
+        grid-column: 1 / -1;
+    }
+
+    .service-grid-item.cancel {
+        transform: none;
+        writing-mode: unset;
+        grid-column: 1 / -1;
+        grid-row: -1;
     }
 }
 
