--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ header h1 {
    font-size: 36px;
    color: #fce138;
    margin: 0;
+   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header a {
@@ -46,6 +47,7 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 footer {
@@ -101,10 +103,12 @@ section {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form {
-    background-color: #fce138;
+    background-color: rgba(252, 225, 56, 0.8);
+    opacity: 80%;
     padding: 20px;
     color: #024e76;
     border-style: solid;
@@ -112,6 +116,8 @@ section {
     border-color: #024e76;
     width: 40%;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
 }
 
 .hero-form h3 {
@@ -131,6 +137,7 @@ section {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 10px;
 }
 
 .hero-form label {
@@ -143,6 +150,7 @@ section {
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 10px;
 }
 
 /* Hero Style End*/
@@ -368,6 +376,7 @@ section {
      width: 100%;
      margin-bottom: 15px;
      margin-top: 5px;
+     border-radius: 10px;
  }
 
  .contact-form button {
@@ -377,7 +386,8 @@ section {
      color:#024e76;
      text-align: center;
      padding: 15px 0;
-     font-size: 16px;    
+     font-size: 16px;  
+     border-radius: 10px;  
 }
 
  .text-left {
