--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -335,6 +335,18 @@ section {
     flex-wrap: wrap;
     justify-content: space-around;
 }
+
+.trainer-1 {
+    background-image: url("../images/trainer-1.jpg");
+}
+
+.trainer-2 {
+    background-image: url("../images/trainer-2.jpg");
+}
+
+.trainer-3 {
+    background-image: url("../images/trainer-3.jpg");
+}
  .trainer {
      margin: 20px;
      background: var(--secondary-color);
@@ -342,9 +354,59 @@ section {
      flex: 1;
  }
 
- .trainer img {
+ .trainer-img {
      width: 100%;
+     min-height: 300px;
+     background-size: cover;
+     display: flex;
+     padding: 15px;
+     align-items: flex-end;
+     position: relative;
+     overflow: hidden;
  }
+
+ .trainer-img::after {
+     content: "";
+     height: 100%;
+     width: 100%;
+     background: linear-gradient(rgba(252, 225, 56, 0.3),rgba(2, 78, 118));
+     position: absolute;
+     top: 0;
+     left: 0;
+     opacity: 0;
+     transition: 0.5s;
+ }
+
+ .trainer:hover .trainer-img::after {
+     opacity: 1;
+ }
+
+ .trainer-img h3 {
+     position: relative;
+     z-index: 9998;
+     font-size: 28px;
+     margin-bottom: 5px;
+     top: 200px;
+     transition: 0.6s;
+ }
+
+ .trainer-img h4 {
+     position: relative;
+     z-index: 9998;
+     font-size: 22px;
+     font-weight: normal;
+     top: 200px;
+     transition: 0.6s;
+ }
+
+ .trainer:hover .trainer-img h3, 
+ .trainer:hover .trainer-img h4 {
+    transform: translate(0, -200px)
+ }
+
+ .trainer:hover .trainer-img h4 {
+     transition-delay: 0.1s;
+ } 
 
  .trainer-bio {
      padding: 25px;
@@ -352,12 +414,14 @@ section {
 
  .trainer-bio h3 {
      font-size: 28px;
+     display: none;
  }
 
  .trainer-bio h4 {
     font-weight: lighter;
     font-size: 22px;
     margin-bottom: 15px;
+    display: none;
  }
 
  .trainer-bio p {
@@ -605,6 +669,17 @@ section {
         writing-mode: unset;
         grid-column: 1 / -1;
         grid-row: -1;
+    }
+
+    .trainer-img h3,
+    .trainer-img h4,
+    .trainer-img::after {
+        display: none;
+    }
+
+    .trainer-bio h3,
+    .trainer-bio h4 {
+        display: block;
     }
 }
 
